# franka_handshake_ros2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  docker-compose.yml
franka_handshake_bringup/: CMakeLists.txt  package.xml
franka_handshake_description/: CMakeLists.txt  README.md  package.xml
franka_handshake_description/launch/: view_franka_handshake.launch.py
franka_handshake_description/meshes/robot_arms/fr3v2/visual/: link1.dae  link2.dae  link3.dae  link4.dae  link5.dae
franka_handshake_description/robots/common/: franka_arm.ros2_control.xacro  franka_arm.srdf.xacro  franka_robot.xacro  group_definition.xacro
franka_handshake_description/robots/fer/: fer.urdf.xacro
franka_handshake_description/robots/fp3/: fp3.urdf.xacro
franka_handshake_description/robots/fr3/: fr3.urdf.xacro
franka_handshake_description/robots/fr3_duo/: fr3_duo.urdf.xacro  fr3_duo_arm.urdf.xacro  fr3_duo_fixed_structure.urdf.xacro
franka_handshake_description/robots/fr3_duo/fr3_duo_cover/: fr3_duo_cover.xacro  inertials.yaml  kinematics.yaml
franka_handshake_description/robots/fr3_duo/fr3_duo_mount/: fr3_duo_mount.xacro  inertials.yaml  kinematics.yaml
franka_handshake_description/robots/fr3v2/: fr3v2.urdf.xacro
franka_handshake_description/test/: franka_handshake_test_urdf_xacro.py
franka_handshake_description/urdf/: franka_handshake.urdf.xacro
franka_handshake_description/urdf/franka_handshake/: franka_handshake_macro.ros2_control.xacro  franka_handshake_macro.xacro
franka_handshake_msgs/: CMakeLists.txt  package.xml
franka_handshake_msgs/action/: Handshake.action  SetGains.action
scripts/: my_maths.py  (+5 more)
(+28 files in other folders)
